## Version 0.1

2020-07-31	Add hg19.rda,hg19Tables.rda,snpquery() but drop hgTables
2020-07-29	Add biomaRt.rda
2020-07-23	Import from lmm as template, save(,compress='xz')