@@ -1,11 +1,11 @@
 Package: pQTLtools
 Version: 0.1
-Date: 2020-8-1
+Date: 2020-8-2
 Title: pQTL Tools
 Author: Jing Hua Zhao
 Maintainer: Jing hua Zhao <jinghuazhao@hotmail.com>
 Depends: R (>= 3.5.0)
-Suggests: gap, phenoscanner
+Suggests: gap, openxlsx, phenoscanner, GenomicRanges, IRanges
 LazyData: Yes
 LazyLoad: Yes
 Description: This repository collects information on a number of protein panels, 
