@@ -19,7 +19,7 @@ Batches are generated and queries are combined into one.
 }
 
 \value{
-The returned value is a list containing regions and results:
+The returned value is a list containing tiles, regions and results:
 }
 
 \section{References}{
@@ -38,7 +38,7 @@ regionqueries("chr17:26691290-26700110")
 INF <- Sys.getenv("INF")
 INF1_merge <- read.delim(file.path(INF,"work","INF1.merge-rsid"),as.is=TRUE)
 
-# SomaLoic, also at GitHub
+# SomaLogic -- gene-based, also at GitHub
 HOME <- Sys.getenv("HOME")
 flank <- 1e+6
 INTERVAL_box <- read.delim(file.path(HOME,"SomaLogic","doc","INTERVAL-box.tsv"),as.is=TRUE)
@@ -51,6 +51,12 @@ regions <- within(subset(INTERVAL_box, UniProt \%in\% with(inf1,uniprot)),
 reset <- with(regions,start<0)
 regions[reset,"start"] <- 0
 regionlist <- unique(with(regions, paste0("chr",chr,":",start,"-",end)))
+
+# SomaLogic -- sentinel-based, continue from codes in help(inf1)
+regionlist <- with(subset(t4, UniProt \%in\% with(inf1,uniprot)),
+                   paste0("chr",Chr,":",Region.start,"-",Region.end))
+r <- regionqueries(regionlist)
+
 }
 }
 \note{adapted from custom codings}
