@@ -1,5 +1,7 @@
 ## Version 0.1
 
+2020-08-02	Suggest openxlsx, GenomicRanges & IRanges to handle >1MB region in regionqueries
+2020-08-01	Fix R CMD check errors in pQTLtools-interval.Rd, add genequries, regionqueries
 2020-07-31	Add hg19.rda,hg19Tables.rda,snpquery() but drop hgTables
 2020-07-29	Add biomaRt.rda
 2020-07-23	Import from lmm as template, save(,compress='xz')
